test/types/type_variables/deitz/part7/test_error1.good
test_error1.chpl:1: In function '__init_test_error1':
test_error1.chpl:14: error: Unresolved call 'foo(:C(int))'
test_error1.chpl:10: note: candidates are: foo(i: int)
